Pull #18608: Add `EqualityRulesRecipes`