@@ -20,6 +20,7 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -57,7 +58,7 @@ public class XpathRegressionAvoidNoArgumentSuperConstructorCallTest
                 AvoidNoArgumentSuperConstructorCallCheck.MSG_CTOR),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT"
                     + "[@text='InputXpathAvoidNoArgumentSuperConstructorCallDefault']]"
                     + "/OBJBLOCK/CTOR_DEF[./IDENT["
@@ -82,7 +83,7 @@ public class XpathRegressionAvoidNoArgumentSuperConstructorCallTest
                 AvoidNoArgumentSuperConstructorCallCheck.MSG_CTOR),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text="
                 + "'InputXpathAvoidNoArgumentSuperConstructorCallInnerClass']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='test']]"
