@@ -20,6 +20,7 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -55,7 +56,7 @@ public class XpathRegressionExplicitInitializationTest extends AbstractXpathTest
                 ExplicitInitializationCheck.MSG_KEY, "a", 0),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathExplicitInitializationPrimitiveType']]"
                         + "/OBJBLOCK/VARIABLE_DEF/IDENT[@text='a']"
@@ -78,7 +79,7 @@ public class XpathRegressionExplicitInitializationTest extends AbstractXpathTest
                 ExplicitInitializationCheck.MSG_KEY, "bar", "null"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathExplicitInitializationObjectType']]"
                         + "/OBJBLOCK/VARIABLE_DEF/IDENT[@text='bar']"
