@@ -20,6 +20,7 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -53,7 +54,7 @@ public class XpathRegressionSuperFinalizeTest extends AbstractXpathTestSupport {
                                         AbstractSuperCheck.MSG_KEY, "finalize"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathSuperFinalizeNoFinalize']]"
                 + "/OBJBLOCK/METHOD_DEF/IDENT[@text='finalize']"
@@ -72,7 +73,7 @@ public class XpathRegressionSuperFinalizeTest extends AbstractXpathTestSupport {
                                         AbstractSuperCheck.MSG_KEY, "finalize"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathSuperFinalizeInnerClass']]"
                 + "/OBJBLOCK/METHOD_DEF/IDENT[@text='finalize']"
@@ -91,7 +92,7 @@ public class XpathRegressionSuperFinalizeTest extends AbstractXpathTestSupport {
                                         AbstractSuperCheck.MSG_KEY, "finalize"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathSuperFinalizeAnonymousClass']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='createAnonymousClass']]"
