@@ -20,6 +20,7 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -57,7 +58,7 @@ public class XpathRegressionUnnecessarySemicolonInEnumerationTest
                 UnnecessarySemicolonInEnumerationCheck.MSG_SEMI),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/ENUM_DEF[./IDENT[@text='Bad']]/OBJBLOCK/SEMI"
         );
 
@@ -78,7 +79,7 @@ public class XpathRegressionUnnecessarySemicolonInEnumerationTest
                 UnnecessarySemicolonInEnumerationCheck.MSG_SEMI),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/ENUM_DEF[./IDENT[@text="
                 + "'InputXpathUnnecessarySemicolonInEnumerationAll']]"
                 + "/OBJBLOCK/SEMI"
