@@ -21,6 +21,7 @@ package org.checkstyle.suppressionxpathfilter.imports;
 
 import java.io.File;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -58,7 +59,7 @@ public class XpathRegressionImportControlTest extends AbstractXpathTestSupport {
                 ImportControlCheck.MSG_DISALLOWED, "java.util.Scanner"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/IMPORT"
         );
 
@@ -125,7 +126,7 @@ public class XpathRegressionImportControlTest extends AbstractXpathTestSupport {
                 ImportControlCheck.MSG_DISALLOWED, "java.util.Scanner"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
             "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='Scanner']]"
         );
 
