@@ -24,6 +24,7 @@ import static com.puppycrawl.tools.checkstyle.checks.javadoc.JavadocMethodCheck.
 
 import java.io.File;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -87,7 +88,7 @@ public class XpathRegressionJavadocMethodTest extends AbstractXpathTestSupport {
                     "@param", "x"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathJavadocMethodTwo']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='checkParam']]/PARAMETERS"
@@ -139,7 +140,7 @@ public class XpathRegressionJavadocMethodTest extends AbstractXpathTestSupport {
                     "@throws", "Exception"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathJavadocMethodFour']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='foo']]"
@@ -164,7 +165,7 @@ public class XpathRegressionJavadocMethodTest extends AbstractXpathTestSupport {
                     "@throws", "org.apache.tools.ant.BuildException"),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathJavadocMethodFive']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='bar']]/SLIST"
