@@ -20,6 +20,7 @@
 package org.checkstyle.suppressionxpathfilter.naming;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -57,7 +58,7 @@ public class XpathRegressionMethodNameTest extends AbstractXpathTestSupport {
                         AbstractNameCheck.MSG_INVALID_PATTERN, "SecondMethod", pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT"
                         + "/CLASS_DEF[./IDENT[@text"
                         + "='InputXpathMethodNameDefault']]"
@@ -82,7 +83,7 @@ public class XpathRegressionMethodNameTest extends AbstractXpathTestSupport {
                         AbstractNameCheck.MSG_INVALID_PATTERN, "MyMethod2", pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT"
                         + "/CLASS_DEF[./IDENT[@text"
                         + "='InputXpathMethodNameInner']]"
@@ -111,7 +112,7 @@ public class XpathRegressionMethodNameTest extends AbstractXpathTestSupport {
                         "ThirdMethod", pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT"
                         + "/INTERFACE_DEF[./IDENT[@text='Check']]"
                         + "/OBJBLOCK/METHOD_DEF/IDENT[@text='ThirdMethod']"
