@@ -22,6 +22,7 @@ package org.checkstyle.suppressionxpathfilter.naming;
 import static com.puppycrawl.tools.checkstyle.checks.naming.PackageNameCheck.MSG_KEY;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -61,7 +62,7 @@ public class XpathRegressionPackageNameTest extends AbstractXpathTestSupport {
                     pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/PACKAGE_DEF/DOT"
                         + "[./IDENT[@text='packagename']]/DOT"
                         + "[./IDENT[@text='naming']]/DOT"
@@ -89,7 +90,7 @@ public class XpathRegressionPackageNameTest extends AbstractXpathTestSupport {
                     pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/PACKAGE_DEF/DOT[./IDENT"
                         + "[@text='PACKAGENAME']]/DOT[./IDENT"
                         + "[@text='suppressionxpathfilter']]"
@@ -117,7 +118,7 @@ public class XpathRegressionPackageNameTest extends AbstractXpathTestSupport {
                     pattern),
         };
 
-        final List<String> expectedXpathQueries = List.of(
+        final List<String> expectedXpathQueries = Collections.singletonList(
                 "/COMPILATION_UNIT/PACKAGE_DEF/DOT"
                         + "[./IDENT[@text='packagename']]/DOT"
                         + "[./IDENT[@text='naming']]/DOT"
